--- a/assets/index.html
+++ b/assets/index.html
@@ -2,11 +2,11 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>go dev</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.bootcdn.net/ajax/libs/jsoneditor/9.5.0/jsoneditor.min.css" rel="stylesheet">
+    <link href="./libs/jsoneditor/jsoneditor.min.css" rel="stylesheet">
     <script src="./script.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jsoneditor/9.5.0/jsoneditor.min.js"></script>
+    <script src="./libs/jsoneditor/jsoneditor.min.js"></script>
 </head>
 <body>
 <div id="login" class="center">
